--- a/simple-weather/simple-weather/Base.lproj/Main.storyboard
+++ b/simple-weather/simple-weather/Base.lproj/Main.storyboard
@@ -93,6 +93,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="dateLabel" destination="i1j-a9-yrl" id="i7e-Tg-Jt8"/>
                         <outlet property="locationLabel" destination="dNR-jB-Zbv" id="wbg-6O-dGN"/>
                     </connections>
                 </viewController>
