--- a/simple-weather/simple-weather/Base.lproj/Main.storyboard
+++ b/simple-weather/simple-weather/Base.lproj/Main.storyboard
@@ -23,6 +23,7 @@
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="o3W-ys-IbW">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="299"/>
+                                        <color key="backgroundColor" red="0.6220899224281311" green="0.84600222110748291" blue="0.91994351148605347" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i1j-a9-yrl">
                                         <rect key="frame" x="20" y="20" width="49" height="29"/>
@@ -95,6 +96,9 @@
                     <connections>
                         <outlet property="dateLabel" destination="i1j-a9-yrl" id="i7e-Tg-Jt8"/>
                         <outlet property="locationLabel" destination="dNR-jB-Zbv" id="wbg-6O-dGN"/>
+                        <outlet property="tempLabel" destination="hql-5C-zOI" id="egu-WK-edb"/>
+                        <outlet property="weatherImage" destination="fGm-35-pAg" id="s96-lg-Wdz"/>
+                        <outlet property="weatherLabel" destination="Xaw-Tl-70L" id="R5i-yk-YEc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
